[album-details][wip] album details ng component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -331,6 +331,8 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
+<ul>
+  <li><a routerLink="/album-details" routerLinkActive="active" ariaCurrentWhenActive="page">Album details</a></li> 
+</ul>
 
 <router-outlet></router-outlet>
