[album-details][wip] add label and distributor

--- a/src/app/album-details/album-details.component.html
+++ b/src/app/album-details/album-details.component.html
@@ -9,8 +9,8 @@
     <div class="info">
       <p>{{ leader | uppercase }}</p>
       <p>{{ title }}</p>
-      <p>Chess MCD 09108</p>
-      <p>Universal</p>
+      <p>{{ label }}</p>
+      <p>{{ distributor }}</p>
       <p>Enr: {{ year }}</p>
     </div>
     <p class="type">{{ type | uppercase }}</p>
