[app][wip] use album-list component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -335,4 +335,6 @@
   <li><a routerLink="/album-details" routerLinkActive="active" ariaCurrentWhenActive="page">Album details</a></li> 
 </ul>
 
+<app-album-list [albumList]="albumList"/> 
+
 <router-outlet></router-outlet>
